--- a/app/src/main/res/layout/barber_item.xml
+++ b/app/src/main/res/layout/barber_item.xml
@@ -44,6 +44,7 @@
 
             <RatingBar
                 android:id="@+id/rating"
+                android:visibility="gone"
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,6 +57,7 @@
 
             <TextView
                 android:id="@+id/rating_text"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
