--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -19,7 +19,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/menu"/>
 
 
     </RelativeLayout>
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hey"
                 android:layout_marginStart="24dp"
-                android:text="Welcome to Anara "
+                android:text="Welcome to GoToSalons Business "
                 android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
                 android:textStyle="bold" />
