--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,16 +33,17 @@
             android:layout_toEndOf="@+id/profile_image"
             android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/menu"
-            android:layout_width="35dp"
+        <TextView
+            android:id="@+id/log_out"
+            android:layout_width="60dp"
             android:layout_height="35dp"
-            android:visibility="invisible"
+            android:text="Logout"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="12dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/menu"/>
+            android:layout_alignParentEnd="true"/>
 
 
     </RelativeLayout>
