--- a/app/src/main/res/layout/activity_future_booking.xml
+++ b/app/src/main/res/layout/activity_future_booking.xml
@@ -171,6 +171,29 @@
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/continue_button"/>
 
+        <LinearLayout
+            android:id="@+id/break_l"
+            android:visibility="gone"
+            android:layout_below="@id/manage_bookings"
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:background="@drawable/grey_mobile_number"
+            android:padding="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+
+            <TextView
+                android:id="@+id/break_text"
+                android:gravity="start|center"
+                android:layout_weight="1.3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
