--- a/app/src/main/res/layout/activity_salon_details.xml
+++ b/app/src/main/res/layout/activity_salon_details.xml
@@ -369,6 +369,7 @@
 
                 <EditText
                     android:id="@+id/facebook_url"
+                    android:inputType="text"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
@@ -405,6 +406,7 @@
                     android:id="@+id/instagram_url"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:inputType="text"
                     android:layout_centerInParent="true"
                     android:layout_margin="3dp"
                     android:background="@null"
@@ -439,6 +441,7 @@
                     android:id="@+id/twitter_url"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:inputType="text"
                     android:background="@null"
                     android:paddingStart="10dp"
                     android:textColor="@color/colorBlack" />
@@ -456,11 +459,20 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/service_recycler_view"
+                android:layout_marginStart="24sp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10sp"
+                android:layout_below="@id/add_service"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <RelativeLayout
                 android:id="@+id/next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/add_service"
+                android:layout_below="@+id/service_recycler_view"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="24dp"
