--- a/app/src/main/res/layout/layout_add_barber.xml
+++ b/app/src/main/res/layout/layout_add_barber.xml
@@ -275,4 +275,17 @@
         android:textSize="16sp" />
 
 
+    <TextView
+        android:id="@+id/remove_barber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/exp_layout"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="24sp"
+        android:text="Remove Barber"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp" />
+
+
 </RelativeLayout>
