--- a/app/src/main/res/layout/activity_owner_details.xml
+++ b/app/src/main/res/layout/activity_owner_details.xml
@@ -291,6 +291,7 @@
                 android:layout_marginEnd="24dp">
 
                 <TextView
+                    android:id="@+id/edit_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NEXT"
