--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="1dp"
     android:layout_marginBottom="1dp"
     android:background="@color/colorMediumGrey">
@@ -22,7 +22,6 @@
             android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="11:00 AM"
             android:textColor="@color/colorBlack"/>
         <TextView
             android:id="@+id/to"
@@ -41,11 +40,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/to"
-            android:text="11:00 AM"
+            android:textColor="@color/colorBlack"/>
+
+        <TextView
+            android:id="@+id/break_time_from"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/time_from"
+            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"/>
+        <TextView
+            android:id="@+id/break_to"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/time_from"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/break_time_from"
+            android:text="to"
+            android:textColor="@color/colorBlack"
+            android:layout_centerHorizontal="true"/>
+
+
+        <TextView
+            android:id="@+id/break_time_to"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/time_from"
+            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/break_to"
             android:textColor="@color/colorBlack"/>
 
     </RelativeLayout>
-
 
     <RelativeLayout
         android:id="@+id/date_l"
