--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,18 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/edit_profile"
+            android:layout_toStartOf="@id/log_out"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:text="Edit Profile"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="12dp"/>
+
+        <TextView
             android:id="@+id/log_out"
             android:layout_width="60dp"
             android:layout_height="35dp"
