--- a/app/src/main/res/layout/add_remove_barber.xml
+++ b/app/src/main/res/layout/add_remove_barber.xml
@@ -53,13 +53,44 @@
             android:layout_centerInParent="true"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/colorDarkGrey"/>
+        android:background="@color/colorDarkGrey" />
+
+    <RelativeLayout
+        android:id="@+id/edit_barber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/edit_barbers"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/ic_baseline_edit_24" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_toEndOf="@id/edit_barbers"
+            android:text="Edit Barbers"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorDarkGrey" />
 
     <RelativeLayout
         android:id="@+id/add_barber"
