--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -41,8 +41,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_below="@id/rl1"
-        android:src="@drawable/icon"
-        android:background="@drawable/circle_white"
+        android:src="@mipmap/ic_launcher"
         android:padding="20dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"/>
