--- a/app/src/main/res/layout/add_service_dialog.xml
+++ b/app/src/main/res/layout/add_service_dialog.xml
@@ -66,6 +66,7 @@
 
     <TextView
         android:id="@+id/tv2"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Short Description"
@@ -77,6 +78,7 @@
 
     <RelativeLayout
         android:id="@+id/l2"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
