--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -77,12 +77,11 @@
 
     <RelativeLayout
         android:id="@+id/date_l"
+        android:layout_marginTop="5dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="40dp"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/date"
