--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyArUuniXjLeQrMee-j6uuNG-7Hn-GaLbEQ</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyDGymNqOArCRSTbB3f67ZX8ZHoPGRVsq1I
+        <!--AIzaSyArUuniXjLeQrMee-j6uuNG-7Hn-GaLbEQ--></string>
 </resources>
