--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,6 @@
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="11-09-2020"
             android:textColor="@color/colorBlack"
             android:textSize="16sp"
             android:layout_marginTop="20dp"
@@ -224,7 +223,7 @@
                 android:layout_toStartOf="@id/manage_bookings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upcoming Bookings"
+                android:text="Bookings"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 android:layout_marginTop="25dp"
