--- a/app/src/main/res/layout/activity_main_owner.xml
+++ b/app/src/main/res/layout/activity_main_owner.xml
@@ -66,7 +66,6 @@
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="11-09-2020"
             android:textColor="@color/colorBlack"
             android:textSize="16sp"
             android:layout_marginTop="20dp"
@@ -206,7 +205,7 @@
                 android:id="@+id/tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Income of Barbers"
+                android:text="Barbers"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 android:layout_marginTop="25dp"
