--- a/app/src/main/res/layout/activity_show_income.xml
+++ b/app/src/main/res/layout/activity_show_income.xml
@@ -72,7 +72,6 @@
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="11-09-2020"
         android:textColor="@color/colorBlack"
         android:textSize="16sp"
         android:layout_marginTop="20dp"
@@ -213,7 +212,7 @@
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upcoming Bookings"
+            android:text="Bookings"
             android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:layout_marginTop="25dp"
